# NodeGet

./: Cargo.toml  Dockerfile
.github/actions/setup-system/: action.yml
.github/workflows/: agent-build.yml  ci.yml  docker-image.yml  release.yml  server-build.yml
agent/: Cargo.toml  config.toml.example
agent/src/monitoring/network_connections/: netlink.rs
agent/src/tasks/: ip.rs  self_update.rs
nodeget-lib/: Cargo.toml
nodeget-lib/src/: self_update.rs
nodeget-lib/src/config/: agent.rs  mod.rs
nodeget-lib/src/monitoring/: data_structure.rs  query.rs
nodeget-lib/src/task/: mod.rs
nodeget-lib/src/utils/: uuid.rs  version.rs
server/: Cargo.toml
server/migration/src/: lib.rs  m20260514_000000_create_visit_stats.rs  m20260514_000001_add_uv_count.rs
server/src/: main.rs  monitoring_push.rs  rpc_timing.rs  visitor_stats.rs  ws_counter.rs
server/src/crontab/: task.rs
server/src/entity/: mod.rs  visit_daily_stats.rs  visit_log.rs
server/src/rpc/agent/: delete_static.rs  mod.rs  query_dynamic_summary.rs  query_dynamic_summary_buckets.rs  query_dynamic_summary_buckets_multi.rs  query_dynamic_summary_history_multi.rs  report_dynamic_summary.rs
server/src/rpc/agent_uuid/: mod.rs
server/src/rpc/nodeget/: mod.rs  self_update.rs
server/src/rpc/task/: mod.rs  query_latest_per_node.rs
server/src/subcommands/: serve.rs
