[workspace]
members = [
    "server",
    "server/migration",
    "agent",
    "nodeget-lib",
]
resolver = "2"

# Rust 1.96 引入了大量新 lint，批量 allow 以保持 CI 绿色
# 可在后续版本逐步修复并移除对应条目
[workspace.lints.clippy]
too_many_lines = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
significant_drop_tightening = "allow"
items_after_statements = "allow"
collapsible_if = "allow"
doc_lazy_continuation = "allow"
doc_markdown = "allow"
unused_async = "allow"
uninlined_format_args = "allow"
redundant_closure_for_method_calls = "allow"
option_if_let_else = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
single_match_else = "allow"
struct_field_names = "allow"
must_use_candidate = "allow"
unnecessary_fallible_conversions = "allow"
unnecessary_sort_by = "allow"
unnecessary_unwrap = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
useless_format = "allow"
use_self = "allow"
enum_glob_use = "allow"
manual_pattern_char_comparison = "allow"
manual_let_else = "allow"
duration_suboptimal_units = "allow"
or_fun_call = "allow"
if_not_else = "allow"
trivially_copy_pass_by_ref = "allow"
future_not_send = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
needless_pass_by_value = "allow"
redundant_else = "allow"
needless_return = "allow"
range_plus_one = "allow"
elidable_lifetime_names = "allow"
stable_sort_primitive = "allow"
question_mark = "allow"
unreadable_literal = "allow"
empty_line_after_doc_comments = "allow"
ptr_as_ptr = "allow"
borrow_as_ptr = "allow"
unnecessary_wraps = "allow"

[profile]
dev = { opt-level = 0, debug = true, debug-assertions = true, overflow-checks = true, lto = false, panic = "unwind", incremental = true, codegen-units = 256, rpath = false }
release = { opt-level = 3, debug = false, debug-assertions = false, overflow-checks = false, lto = false, panic = "unwind", incremental = false, codegen-units = 16, rpath = false }
fastest = { inherits = "dev", opt-level = 0, debug = 0, debug-assertions = true, overflow-checks = true, lto = false, panic = "unwind", incremental = true, codegen-units = 512, rpath = false }
minimal = { inherits = "release", opt-level = "z", lto = true, codegen-units = 1, panic = "abort", debug = false, strip = true, debug-assertions = false, overflow-checks = false }
